Completed basic layout of dmgen_ui.

--- a/dmgen_ui/src/my-view1.html
+++ b/dmgen_ui/src/my-view1.html
@@ -133,6 +133,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <h1>Data Components</h1>
+      <p><i>Select pre-built model components and they will be inserted into the data containers.</i></p>
       <p>
       Filter Component Type Models:
         <form> 
@@ -157,18 +158,14 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </div>
     <div class="card">
     <h2>Primary Data Container</h2>
-    <paper-item>A Data Item</paper-item> <paper-button>An action</paper-button><br/>
+    <paper-item>A Model Component</paper-item><br/>
     <paper-card heading="Sub Container 1">
-      <div class="card-content">Some content</div>
-      <div class="card-actions">
-        <paper-button>Some action</paper-button>
-      </div>
+      <div class="card-content">A Different Model Component</div>
+      <div class="card-content">Model Component #3</div>
     </paper-card>
     <paper-card heading="Sub Container 2">
-      <div class="card-content">Some other content</div>
-      <div class="card-actions">
-        <paper-button>Some other action</paper-button>
-      </div>
+      <div class="card-content">Model Component #4</div>
+      <div class="card-content">Model Component #5</div>
     </paper-card>
     </div>
     <div class="card">
