--- a/dmgen_ui/src/my-view2.html
+++ b/dmgen_ui/src/my-view2.html
@@ -9,6 +9,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../bower_components/paper-card/paper-card.html">
 
 <dom-module id="my-view2">
 
@@ -47,17 +54,46 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <div class="circle">2</div>
-      <h1>New Component</h1>
+      <h1>Data Components</h1>
+      
       <p>
-        Select Type:
-        <ul>
-        <li>Text Entry</li>
-        <li>Integer Entry</li>
-        <li>Float Entry</li>
-        <li>File Entry</li>
-        </ul>
+      Select Component Type:
+        <form> 
+        <paper-dropdown-menu label="Select Type" placeholder='Text'>
+          <paper-listbox class="dropdown-content">
+          <paper-item>Text</paper-item><br/>
+          <paper-item>Integer</paper-item><br/>
+          <paper-item>Float</paper-item><br/>
+          <paper-item>File</paper-item><br/>
+          <paper-item>Date/Time</paper-item><br/>
+          <paper-item>Container</paper-item><br/>
+          </paper-listbox>
+        </paper-dropdown-menu>
+
+        <paper-icon-button icon="icons:send" type='submit'></paper-icon-button>
+        
+        </form>
       </p>
+      <i>One of the below cards is created and opened based on the type selected.</i>
     </div>
+    <paper-card heading="Text">
+      <div class="card-content">XdStringType data form.</div>
+    </paper-card>
+    <paper-card heading="Integer">
+      <div class="card-content">XdCountType data form.</div>
+    </paper-card>
+    <paper-card heading="Float">
+      <div class="card-content">XdQuantityType data form.</div>
+    </paper-card>
+    <paper-card heading="File">
+      <div class="card-content">XdFileType data form.</div>
+    </paper-card>
+    <paper-card heading="Date/Time">
+      <div class="card-content">XdTemporalType data form.</div>
+    </paper-card>
+    <paper-card heading="Container">
+      <div class="card-content">ClusterType data form.</div>
+    </paper-card>
 
   </template>
 
